fixed html field type to standard

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -124,7 +124,7 @@
                         Branch (optional):
                     </td>
                     <td>
-                        <input id="input_branch" type="url" placeholder="main, master, develop...">
+                        <input id="input_branch" placeholder="main, master, develop...">
                     </td>
                 </tr>
 
